--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-2/int01-2-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-2/int01-2-2/int01-2-2.component.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="six wide field required">
                         <label class="custom-label-w-15">ประเภทใบอนุญาต</label>
-                        <select class="ui dropdown">
+                        <select class="ui dropdown ai">
                             <option value="0">ยส.ป2.อื่น</option>
                             <option value="1">สร.นำเข้า ป1.</option>
                             <option value="2">สร.นำเข้า ป2.</option>
@@ -1016,7 +1016,7 @@
             <div class="inline fields">
                 <div class="eight wide field ">
                     <label class="custom-label-w-15">ประเภทใบอนุญาต</label>
-                    <select id="idint" class="ui dropdown">
+                    <select id="idint" class="ui dropdown ai">
                         <option value="0">สุราป4</option>
                         <option value="1">สุราป3</option>
                     </select>
@@ -1042,7 +1042,7 @@
             <div class="inline fields">
                 <div class="eight wide field ">
                     <label class="custom-label-w-15">เขต</label>
-                    <select id="id" class="ui dropdown">
+                    <select id="id" class="ui dropdown ai">
                         <option value="0">นอก</option>
                         <option value="1">ใน</option>
                     </select>
