--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-2/int06-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-2/int06-2.component.html
@@ -26,7 +26,7 @@
         <div class="inline fields">
           <div class="eight wide field ">
             <label class="custom-label-w-25">รูปแบบการจัดเรียงข้อมูล</label>
-            <select class="ui dropdown">
+            <select class="ui dropdown ai">
               <option value="0">จัดเรียงตามงบประมาณ</option>
               <option value="1">จัดเรียงตามวันที่บันทึก</option>
               <option value="2">จัดเรียงตามเลขเอกสาร</option>
