--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-2/int08-1-2.component.html
@@ -132,7 +132,7 @@
                 ประเภทกระดาษทำการ
               </div>
               <div class="five wide field">
-                <select class="ui dropdown">
+                <select class="ui dropdown ai">
                   <option value="">เลือกประเภทกระดาษทำการ</option>
                   <option value="{{ d }}" *ngFor="let d of data">{{ d }}</option>
                 </select>
@@ -384,7 +384,7 @@
           <tr>
             <td>1</td>
             <td>
-              <select id="selectCondition1" class="ui dropdown">
+              <select id="selectCondition1" class="ui dropdown ai">
                 <option value="1">Equal</option>
                 <option value="0">Not Equal</option>
               </select>
@@ -395,7 +395,7 @@
             <td>1</td>
             <td>ต่ำ</td>
             <td>
-              <select id="selectColor1" class="ui dropdown">
+              <select id="selectColor1" class="ui dropdown ai">
                 <option value="0">เขียว</option>
                 <option value="1">เหลือง</option>
                 <option value="1">แดง</option>
@@ -410,7 +410,7 @@
           <tr>
             <td>2</td>
             <td>
-              <select id="selectCondition2" class="ui dropdown">
+              <select id="selectCondition2" class="ui dropdown ai">
                 <option value="0">Equal</option>
                 <option value="1">Not Equal</option>
               </select>
@@ -421,7 +421,7 @@
             <td>2</td>
             <td>กลาง</td>
             <td>
-              <select id="selectColor2" class="ui dropdown">
+              <select id="selectColor2" class="ui dropdown ai">
                 <option value="0">เหลือง</option>
                 <option value="1">เขียว</option>
                 <option value="1">แดง</option>
@@ -436,7 +436,7 @@
           <tr>
             <td>3</td>
             <td>
-              <select id="selectCondition3" class="ui dropdown">
+              <select id="selectCondition3" class="ui dropdown ai">
                 <option value="0">Equal</option>
                 <option value="1">Not Equal</option>
               </select>
@@ -447,7 +447,7 @@
             <td>3</td>
             <td>สูง</td>
             <td>
-              <select id="selectColor3" class="ui dropdown">
+              <select id="selectColor3" class="ui dropdown ai">
                 <option value="0">แดง</option>
                 <option value="1">เหลือง</option>
                 <option value="1">เขียว</option>
