--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-2/int08-2-1/int08-2-1.component.html
@@ -65,7 +65,7 @@
       <br>
       <div class="ui grid center aligned">
         <div class="sixteen wide column">
-            กระดาษทำการประเมินความเสี่ยงความมั่นคงปลอดภัยของระบบสารสนเทศหลักของกรมฯ	
+          กระดาษทำการประเมินความเสี่ยงความมั่นคงปลอดภัยของระบบสารสนเทศหลักของกรมฯ
           <br> ปีงบประมาณ พ.ศ. 2561
           <br> กลุ่มตรวจสอบภายใน กรมสรรพสามิต
         </div>
@@ -205,7 +205,7 @@
 <div id="modalInt082" class="ui modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-      กำหนดเงื่อนไข RL และแปลงค่าประเมินความเสี่ยงระบบสารสนเทศหลักของกรมฯ								
+    กำหนดเงื่อนไข RL และแปลงค่าประเมินความเสี่ยงระบบสารสนเทศหลักของกรมฯ
 
   </div>
 
@@ -231,7 +231,7 @@
           <tr>
             <td>1</td>
             <td>
-              <select id="selectCondition1" class="ui dropdown">
+              <select id="selectCondition1" class="ui dropdown ai">
                 <option value="1">Less Than</option>
                 <option value="0">Between</option>
                 <option value="2">More Than</option>
@@ -243,7 +243,7 @@
             <td>1</td>
             <td>ต่ำ</td>
             <td>
-              <select id="selectColor1" class="ui dropdown">
+              <select id="selectColor1" class="ui dropdown ai">
                 <option value="0">เขียว</option>
                 <option value="1">เหลือง</option>
                 <option value="2">แดง</option>
@@ -258,7 +258,7 @@
           <tr>
             <td>2</td>
             <td>
-              <select id="selectCondition2" class="ui dropdown">
+              <select id="selectCondition2" class="ui dropdown ai">
                 <option value="0">Between</option>
                 <option value="1">Less Than</option>
                 <option value="2">More Than</option>
@@ -270,7 +270,7 @@
             <td>2</td>
             <td>กลาง</td>
             <td>
-              <select id="selectColor2" class="ui dropdown">
+              <select id="selectColor2" class="ui dropdown ai">
                 <option value="0">เหลือง</option>
                 <option value="1">เขียว</option>
                 <option value="2">แดง</option>
@@ -285,7 +285,7 @@
           <tr>
             <td>3</td>
             <td>
-              <select id="selectCondition3" class="ui dropdown">
+              <select id="selectCondition3" class="ui dropdown ai">
                 <option value="0">More Than</option>
                 <option value="1">Between</option>
                 <option value="2">Less Than</option>
@@ -297,7 +297,7 @@
             <td>3</td>
             <td>สูง</td>
             <td>
-              <select id="selectColor3" class="ui dropdown">
+              <select id="selectColor3" class="ui dropdown ai">
                 <option value="0">แดง</option>
                 <option value="1">เหลือง</option>
                 <option value="2">เขียว</option>
