--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-5/int08-3-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-5/int08-3-5.component.html
@@ -80,21 +80,21 @@
         </div>
 
         <div class="column" style="width: 15%; margin-left: -8%;">
-            &nbsp;
+          &nbsp;
           <br> ตำแหน่งว่าง
           <br> ตำแหน่งว่าง
           <br> ตำแหน่งว่าง
         </div>
 
         <div class="column" style="width: 11%;">
-            &nbsp;
+          &nbsp;
           <br> เท่ากับ
           <br> อยู่ระหว่าง
           <br> อยู่ระหว่าง
         </div>
 
         <div class="column right aligned" style="width: 6%;">
-            &nbsp;
+          &nbsp;
           <br> 0
           <br> 1 - 2
           <br>
@@ -102,28 +102,28 @@
         </div>
 
         <div class="column" style="width: 12%;">
-            &nbsp;
+          &nbsp;
           <br> กำหนดค่าเป็น
           <br> กำหนดค่าเป็น
           <br> กำหนดค่าเป็น
         </div>
 
         <div class="column" style="width: 6%;">
-            &nbsp;
+          &nbsp;
           <br> 1
           <br> 2
           <br> 3
         </div>
 
         <div class="column" style="width: 12%;">
-            &nbsp;
+          &nbsp;
           <br> กำหนดค่าเป็น
           <br> กำหนดค่าเป็น
           <br> กำหนดค่าเป็น
         </div>
 
         <div class="column" style="width: 5%;">
-            &nbsp;
+          &nbsp;
           <br> ต่ำ
           <br> กลาง
           <br> สูง
@@ -310,7 +310,7 @@
 <div id="modalInt0835" class="ui modal hidden transition">
   <i class="close icon"></i>
   <div class="header">
-      กำหนดเงื่อนไข RL และแปลงค่าประเมินความเสี่ยงระบบควบคุมภายใน	  </div>
+    กำหนดเงื่อนไข RL และแปลงค่าประเมินความเสี่ยงระบบควบคุมภายใน </div>
 
   <div class="content">
     <div class="ui form">
@@ -338,7 +338,7 @@
           <tr>
             <td>1</td>
             <td>
-              <select id="selectCondition1" class="ui dropdown">
+              <select id="selectCondition1" class="ui dropdown ai">
                 <option value="0">Equal</option>
                 <option value="1">Between</option>
                 <option value="1">Not Equal</option>
@@ -350,7 +350,7 @@
             <td>1</td>
             <td>ต่ำ</td>
             <td>
-              <select id="selectColor1" class="ui dropdown">
+              <select id="selectColor1" class="ui dropdown ai">
                 <option value="0">เขียว</option>
                 <option value="1">เหลือง</option>
                 <option value="1">แดง</option>
@@ -365,7 +365,7 @@
           <tr>
             <td>2</td>
             <td>
-              <select id="selectCondition2" class="ui dropdown">
+              <select id="selectCondition2" class="ui dropdown ai">
                 <option value="0">Between</option>
                 <option value="1">Equal</option>
                 <option value="1">Not Equal</option>
@@ -377,7 +377,7 @@
             <td>2</td>
             <td>กลาง</td>
             <td>
-              <select id="selectColor2" class="ui dropdown">
+              <select id="selectColor2" class="ui dropdown ai">
                 <option value="0">เหลือง</option>
                 <option value="1">เขียว</option>
                 <option value="1">แดง</option>
@@ -392,7 +392,7 @@
           <tr>
             <td>3</td>
             <td>
-              <select id="selectCondition3" class="ui dropdown">
+              <select id="selectCondition3" class="ui dropdown ai">
                 <option value="0">Between</option>
                 <option value="1">Equal</option>
                 <option value="1">Not Equal</option>
@@ -404,7 +404,7 @@
             <td>3</td>
             <td>สูง</td>
             <td>
-              <select id="selectColor3" class="ui dropdown">
+              <select id="selectColor3" class="ui dropdown ai">
                 <option value="0">แดง</option>
                 <option value="1">เหลือง</option>
                 <option value="1">เขียว</option>
