--- a/workspace/ims-client/src/app/buckwaframework/project/pages/userManagement/userManagement-detail.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/userManagement/userManagement-detail.html
@@ -24,7 +24,7 @@
                         <label>Password</label>
                         <div class="ui icon input" (mousedown)="showHidePassword()" (mouseup)="showHidePassword()">
                             <input id='password' [type]="typePassword" placeholder="Password" name="password" (change)="inputPassword()">
-                            <i class="large unhide icon" ></i>
+                            <i class="large unhide icon"></i>
                         </div>
                     </div>
                 </div>
@@ -32,35 +32,35 @@
                     <div class="three wide field">
                         <label>Enabled</label>
                         <div id="enabled" class="ui checkbox">
-                            <input type="checkbox" name="enabled" >
+                            <input type="checkbox" name="enabled">
                             <label>Enabled</label>
                         </div>
                     </div>
                     <div class="three wide field">
                         <label>Account Non Expired</label>
                         <div id="accountNonExpired" class="ui checkbox">
-                            <input type="checkbox" name="accountNonExpired" >
+                            <input type="checkbox" name="accountNonExpired">
                             <label>Enabled</label>
                         </div>
                     </div>
                     <div class="three wide field">
                         <label>Credentials Non Expired</label>
                         <div id="credentialsNonExpired" class="ui checkbox">
-                            <input type="checkbox" name="credentialsNonExpired" >
+                            <input type="checkbox" name="credentialsNonExpired">
                             <label>Enabled</label>
                         </div>
                     </div>
                     <div class="three wide field">
                         <label>Account Non Locked</label>
                         <div id="accountNonLocked" class="ui checkbox">
-                            <input type="checkbox" name="accountNonLocked" >
+                            <input type="checkbox" name="accountNonLocked">
                             <label>Enabled</label>
                         </div>
                     </div>
                     <div class="three wide field">
                         <label>ภาค</label>
                         <div id="sectorSelectOption" class="ui checkbox">
-                            <select class="ui dropdown" id="selectSector" name="sector" >
+                            <select class="ui dropdown ai" id="selectSector" name="sector">
                                 <option></option>
                             </select>
                         </div>
