--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
@@ -13,8 +13,10 @@
                     </div>
                     <div class="six wide field">
                         <label class="custom-label-w-20">เลขที่วิเคราะห์ข้อมูล</label>
-                        <select class="ui dropdown" name="analysNumbers" id="analysNumbers" [(ngModel)]="analysNumber" (change)="selectAnalysNumbers()" *ngIf="analysNumberArr !== ''">
-                            <option *ngFor="let list of analysNumberArr" ng-value="list">{{list}}</option>
+                        <select class="ui dropdown ai" style="width: 100% !important" name="analysNumbers" id="analysNumbers" [(ngModel)]="analysNumber"
+                            (change)="selectAnalysNumbers()" *ngIf="analysNumberArr !== ''">
+                            <option value="">ทั้งหมด</option>
+                            <option *ngFor="let list of analysNumberArr">{{list}}</option>
                         </select>
                         <input value="{{analysNumber}}" readonly="" *ngIf="analysNumberArr === ''" class="custom-readonly">
                     </div>
@@ -67,7 +69,7 @@
                         <div class="inline fields">
                             <div class="sixteen wide field">
                                 <label style="width: 5em;">ภาค</label>
-                                <select class="ui dropdown" name="sector" id="sector" (change)="changeSector()">
+                                <select class="ui dropdown ai" style="width: 100% !important" name="sector" id="sector" (change)="changeSector()">
                                     <option value="">ทั้งหมด</option>
                                     <option *ngFor="let list of sectorArr">{{list.value1}}</option>
                                 </select>
@@ -80,7 +82,7 @@
                         <div class="inline fields">
                             <div class="sixteen wide field">
                                 <label style="width: 5em;">พิกัด</label>
-                                <select class="ui dropdown" name="coordinates" id="coordinates" (change)="changeCoordinates()">
+                                <select class="ui dropdown ai" style="width: 100% !important" name="coordinates" id="coordinates" (change)="changeCoordinates()">
                                     <option value="">ทั้งหมด</option>
                                     <option *ngFor="let list of coordinatesArr">{{list.value1}}</option>
                                 </select>
