--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-4/int01-4-2/int01-4-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-4/int01-4-2/int01-4-2.component.html
@@ -33,7 +33,7 @@
         <div class="inline fields">
           <div class="eight wide field ">
             <label class="custom-label-w-25">สำนักงานสรรพสามิตภาค</label>
-            <select name="selectZone" id="selectZone" class="ui dropdown">
+            <select name="selectZone" id="selectZone" class="ui dropdown ai">
               <option *ngFor="let item of selectZone; index as i;" value="{{i+1}}">{{item.value}}</option>
             </select>
           </div>
@@ -42,7 +42,7 @@
         <div class="inline fields">
           <div class="eight wide field">
             <label class="custom-label-w-25">สำนักงานสรรพสามิตพื้นที่</label>
-            <select name="selectArea" id="selectArea" class="ui dropdown">
+            <select name="selectArea" id="selectArea" class="ui dropdown ai">
               <option *ngFor="let item of selectArea; index as i;" value="{{i+1}}">{{item.value}}</option>
             </select>
           </div>
