--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-6/int01-6-1/int01-6-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int01/int01-6/int01-6-1/int01-6-1.component.html
@@ -11,36 +11,36 @@
                 <div class="inline fields">
                     <div class="eight wide field">
                         <label class="custom-label-w-25">สำนักงานสรรพสามิตภาค</label>
-                        <select name="selectZone" id="selectZone" class="ui dropdown">
-              <option *ngFor="let item of zoneList; index as i;" value="{{i+1}}">{{item.value}}</option>
-            </select>
+                        <select name="selectZone" id="selectZone" class="ui dropdown ai">
+                            <option *ngFor="let item of zoneList; index as i;" value="{{i+1}}">{{item.value}}</option>
+                        </select>
                     </div>
                 </div>
 
                 <div class="inline fields">
                     <div class="eight wide field">
                         <label class="custom-label-w-25">สำนักงานสรรพสามิตพื้นที่</label>
-                        <select name="selectArea" id="selectArea" class="ui dropdown">
-              <option *ngFor="let item of areaList; index as i;" value="{{i+1}}">{{item.value}}</option>
-            </select>
+                        <select name="selectArea" id="selectArea" class="ui dropdown ai">
+                            <option *ngFor="let item of areaList; index as i;" value="{{i+1}}">{{item.value}}</option>
+                        </select>
                     </div>
                 </div>
 
                 <div class="inline fields">
                     <div class="eight wide field">
                         <label class="custom-label-w-25">สำนัักงานสรรพสามิตพื้นที่สาขา</label>
-                        <select name="selectSubArea" id="selectSubArea" class="ui dropdown">
-              <option *ngFor="let item of subAreaList; index as i;" value="{{i+1}}">{{item.value}}</option>
-            </select>
+                        <select name="selectSubArea" id="selectSubArea" class="ui dropdown ai">
+                            <option *ngFor="let item of subAreaList; index as i;" value="{{i+1}}">{{item.value}}</option>
+                        </select>
                     </div>
                 </div>
 
                 <div class="inline fields">
                     <div class="eight wide field">
                         <label class="custom-label-w-25">ผู้ประกอบการ</label>
-                        <select name="selectCompany" id="selectCompany" class="ui dropdown">
-              <option *ngFor="let item of companyList; index as i;" value="{{i+1}}">{{item.value}}</option>
-            </select>
+                        <select name="selectCompany" id="selectCompany" class="ui dropdown ai">
+                            <option *ngFor="let item of companyList; index as i;" value="{{i+1}}">{{item.value}}</option>
+                        </select>
                     </div>
                 </div>
 
@@ -67,42 +67,42 @@
             <div class="ui center aligned grid">
                 <div class="eight wide column">
                     <button class="ui mini primary button width-100" (click)="searchData()">
-            <i class="search icon"></i>
-            ค้นหา
-          </button>
+                        <i class="search icon"></i>
+                        ค้นหา
+                    </button>
                     <button class="ui mini button width-100" (click)="clearData()">
-            <i class="refresh icon"></i>
-            ล้างข้อมูล
-          </button>
+                        <i class="refresh icon"></i>
+                        ล้างข้อมูล
+                    </button>
                 </div>
             </div>
         </div>
         <br>
 
         <div class="ui grid">
-        <div class="ui segment"  style="overflow-x: scroll;">
-            <table id="table1" class="ui small celled table">
-                <thead>
-                    <tr style="text-align: center;">
-                        <th>ผู้ประกอบการ</th>
-                        <th>ประเภทใบอนุญาต</th>
-                        <th>กันยายน</th>
-                        <th>ตุลาคม </th>
-                        <th>พฤศจิกายน </th>
-                        <th>ธันวาคม </th>
-                        <th>มกราคม </th>
-                        <th>กุมภาพันธ์ </th>
-                        <th>มีนาคม  </th>
-                        <th>เมษายน  </th>
-                        <th>พฤษภาคม   </th>
-                        <th>มิถุนายน </th>
-                        <th>กรกฎาคม</th>
-                        
-                    </tr>
-                </thead>
-            </table>
+            <div class="ui segment" style="overflow-x: scroll;">
+                <table id="table1" class="ui small celled table">
+                    <thead>
+                        <tr style="text-align: center;">
+                            <th>ผู้ประกอบการ</th>
+                            <th>ประเภทใบอนุญาต</th>
+                            <th>กันยายน</th>
+                            <th>ตุลาคม </th>
+                            <th>พฤศจิกายน </th>
+                            <th>ธันวาคม </th>
+                            <th>มกราคม </th>
+                            <th>กุมภาพันธ์ </th>
+                            <th>มีนาคม </th>
+                            <th>เมษายน </th>
+                            <th>พฤษภาคม </th>
+                            <th>มิถุนายน </th>
+                            <th>กรกฎาคม</th>
+
+                        </tr>
+                    </thead>
+                </table>
+            </div>
         </div>
-        </div>
-    
+
     </div>
 </div>
