--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-2/int05-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-2/int05-2.component.html
@@ -8,7 +8,7 @@
         <div class="inline fields">
           <div class="eight wide field">
             <label class="custom-label-w-25">สำนักงานสรรพสามิตภาค</label>
-            <select class="ui dropdown">
+            <select class="ui dropdown ai">
               <option *ngFor="let item of zoneList; index as i;" value="{{i+1}}">{{item.value}}</option>
             </select>
           </div>
@@ -17,7 +17,7 @@
         <div class="inline fields">
           <div class="eight wide field">
             <label class="custom-label-w-25">สำนักงานสรรพสามิตพื้นที่</label>
-            <select class="ui dropdown">
+            <select class="ui dropdown ai">
               <option *ngFor="let item of areaList; index as i;" value="{{i+1}}">{{item.value}}</option>
             </select>
           </div>
@@ -26,7 +26,7 @@
         <div class="inline fields">
           <div class="eight wide field">
             <label class="custom-label-w-25">สำนัักงานสรรพสามิตพื้นที่สาขา</label>
-            <select class="ui dropdown">
+            <select class="ui dropdown ai">
               <option *ngFor="let item of branchList; index as i;" value="{{i+1}}">{{item.value}}</option>
             </select>
           </div>
