--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-1/int08-1-1.component.html
@@ -128,7 +128,7 @@
                 ประเภทกระดาษทำการ
               </div>
               <div class="five wide field">
-                <select class="ui dropdown">
+                <select class="ui dropdown ai">
                   <option value="">เลือกประเภทกระดาษทำการ</option>
                   <option value="{{ d }}" *ngFor="let d of data">{{ d }}</option>
                 </select>
@@ -506,7 +506,7 @@
           <label>ข้อมูลที่ใช้ตรวจสอบ </label>
         </div>
         <div class="six wide field">
-          <select id="selectC1" class="ui dropdown">
+          <select id="selectC1" class="ui dropdown ai">
             <option value="1">เงินงบประมาณตามแผนยุทธศาสตร์</option>
             <option value="0">เงินงบประมาณที่กรมอนุมัติ</option>
           </select>
@@ -532,7 +532,7 @@
           <tr>
             <td>1</td>
             <td>
-              <select id="selectCondition1" class="ui dropdown">
+              <select id="selectCondition1" class="ui dropdown ai">
                 <option value="1">Less Than</option>
                 <option value="0">Between</option>
                 <option value="2">More Than</option>
@@ -544,7 +544,7 @@
             <td>1</td>
             <td>ต่ำ</td>
             <td>
-              <select id="selectColor1" class="ui dropdown">
+              <select id="selectColor1" class="ui dropdown ai">
                 <option value="0">เขียว</option>
                 <option value="1">เหลือง</option>
                 <option value="1">แดง</option>
@@ -559,7 +559,7 @@
           <tr>
             <td>2</td>
             <td>
-              <select id="selectCondition2" class="ui dropdown">
+              <select id="selectCondition2" class="ui dropdown ai">
                 <option value="0">Between</option>
                 <option value="1">Less Than</option>
                 <option value="1">More Than</option>
@@ -571,7 +571,7 @@
             <td>2</td>
             <td>กลาง</td>
             <td>
-              <select id="selectColor2" class="ui dropdown">
+              <select id="selectColor2" class="ui dropdown ai">
                 <option value="0">เหลือง</option>
                 <option value="1">เขียว</option>
                 <option value="1">แดง</option>
@@ -586,7 +586,7 @@
           <tr>
             <td>3</td>
             <td>
-              <select id="selectCondition3" class="ui dropdown">
+              <select id="selectCondition3" class="ui dropdown ai">
                 <option value="0">More Than</option>
                 <option value="1">Between</option>
                 <option value="2">Less Than</option>
@@ -598,7 +598,7 @@
             <td>3</td>
             <td>สูง</td>
             <td>
-              <select id="selectColor3" class="ui dropdown">
+              <select id="selectColor3" class="ui dropdown ai">
                 <option value="0">แดง</option>
                 <option value="1">เหลือง</option>
                 <option value="1">เขียว</option>
