--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-3/int08-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-1/int08-1-3/int08-1-3.component.html
@@ -140,7 +140,7 @@
                 ประเภทกระดาษทำการ
               </div>
               <div class="five wide field">
-                <select class="ui dropdown">
+                <select class="ui dropdown ai">
                   <option value="">เลือกประเภทกระดาษทำการ</option>
                   <option value="{{ d }}" *ngFor="let d of data">{{ d }}</option>
                 </select>
@@ -462,7 +462,7 @@
           <tr>
             <td>1</td>
             <td>
-              <select id="selectCondition1" class="ui dropdown">
+              <select id="selectCondition1" class="ui dropdown ai">
                 <option value="0">Between</option>
                 <option value="1">Less Than</option>
                 <option value="2">More Than</option>
@@ -474,7 +474,7 @@
             <td>1</td>
             <td>ต่ำ</td>
             <td>
-              <select id="selectColor1" class="ui dropdown">
+              <select id="selectColor1" class="ui dropdown ai">
                 <option value="0">เขียว</option>
                 <option value="1">เหลือง</option>
                 <option value="2">แดง</option>
@@ -489,7 +489,7 @@
           <tr>
             <td>2</td>
             <td>
-              <select id="selectCondition2" class="ui dropdown">
+              <select id="selectCondition2" class="ui dropdown ai">
                 <option value="0">Between</option>
                 <option value="1">Less Than</option>
                 <option value="2">More Than</option>
@@ -501,7 +501,7 @@
             <td>2</td>
             <td>กลาง</td>
             <td>
-              <select id="selectColor2" class="ui dropdown">
+              <select id="selectColor2" class="ui dropdown ai">
                 <option value="0">เหลือง</option>
                 <option value="1">เขียว</option>
                 <option value="1">แดง</option>
@@ -516,7 +516,7 @@
           <tr>
             <td>3</td>
             <td>
-              <select id="selectCondition3" class="ui dropdown">
+              <select id="selectCondition3" class="ui dropdown ai">
                 <option value="0">Between</option>
                 <option value="1">Less Than</option>
                 <option value="2">More Than</option>
@@ -528,7 +528,7 @@
             <td>3</td>
             <td>สูง</td>
             <td>
-              <select id="selectColor3" class="ui dropdown">
+              <select id="selectColor3" class="ui dropdown ai">
                 <option value="0">แดง</option>
                 <option value="1">เหลือง</option>
                 <option value="1">เขียว</option>
