--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-1/int08-3-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-1/int08-3-1.component.html
@@ -413,7 +413,7 @@
           <tr>
             <td>1</td>
             <td>
-              <select id="selectCondition1" class="ui dropdown">
+              <select id="selectCondition1" class="ui dropdown ai">
                 <option value="0">Between</option>
                 <option value="1">Less Than</option>
                 <option value="2">More Than</option>
@@ -425,7 +425,7 @@
             <td>1</td>
             <td>ต่ำ</td>
             <td>
-              <select id="selectColor1" class="ui dropdown">
+              <select id="selectColor1" class="ui dropdown ai">
                 <option value="0">เขียว</option>
                 <option value="1">เหลือง</option>
                 <option value="2">แดง</option>
@@ -440,7 +440,7 @@
           <tr>
             <td>2</td>
             <td>
-              <select id="selectCondition2" class="ui dropdown">
+              <select id="selectCondition2" class="ui dropdown ai">
                 <option value="0">Between</option>
                 <option value="1">Less Than</option>
                 <option value="2">More Than</option>
@@ -452,7 +452,7 @@
             <td>2</td>
             <td>กลาง</td>
             <td>
-              <select id="selectColor2" class="ui dropdown">
+              <select id="selectColor2" class="ui dropdown ai">
                 <option value="0">เหลือง</option>
                 <option value="1">เขียว</option>
                 <option value="2">แดง</option>
@@ -467,7 +467,7 @@
           <tr>
             <td>3</td>
             <td>
-              <select id="selectCondition3" class="ui dropdown">
+              <select id="selectCondition3" class="ui dropdown ai">
                 <option value="0">More Than</option>
                 <option value="1">Between</option>
                 <option value="2">Less Than</option>
@@ -479,7 +479,7 @@
             <td>3</td>
             <td>สูง</td>
             <td>
-              <select id="selectColor3" class="ui dropdown">
+              <select id="selectColor3" class="ui dropdown ai">
                 <option value="0">แดง</option>
                 <option value="1">เหลือง</option>
                 <option value="1">เขียว</option>
@@ -529,7 +529,7 @@
       <div class="inline fields">
         <div class="five wide field "></div>
         <div class="seven wide field ">
-          <select id="selectColorto2" class="ui dropdown">
+          <select id="selectColorto2" class="ui dropdown ai">
             <option value="0">สรรพสามิตภาคที่ 5 </option>
             <option value="1">สรรพสามิตภาคที่ 4 </option>
             <option value="2">สรรพสามิตภาคที่ 3 </option>
@@ -539,7 +539,7 @@
       <div class="inline fields">
         <div class="five wide field "></div>
         <div class="five wide field ">
-          <select id="selectColorto3" class="ui dropdown">
+          <select id="selectColorto3" class="ui dropdown ai">
             <option value="0">สรรพสามิตพื้นที่เชียงราย</option>
             <option value="1">สรรพสามิตพื้นที่เชียงใหม่</option>
             <option value="2">สรรพสามิตพื้นที่พะเยา</option>
