--- a/workspace/ims-client/src/app/buckwaframework/project/management-control/mgcontrol/mgcontrol.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/management-control/mgcontrol/mgcontrol.component.html
@@ -2,7 +2,9 @@
   <div class="row">
     <div class="sixteen wide column">
       <div class="ui blue inverted segment center aligned">
-        <h4>แสดงข้อมูลการตรวจ <span class="red">{{topic}}</span></h4>
+        <h4>แสดงข้อมูลการตรวจ
+          <span class="red">{{topic}}</span>
+        </h4>
       </div>
     </div>
   </div>
@@ -15,7 +17,7 @@
               <label>เรื่อง:</label>
             </div>
             <div class="eleven wide field">
-              <select [(ngModel)]="topic" name="topic" style="width: 100%" class="ui fluid search dropdown">
+              <select [(ngModel)]="topic" name="topic" style="width: 100%" class="ui fluid search dropdown ai">
                 <option value="">เลือกเรื่อง</option>
                 <option value="ระบบการตรวจภาษี">ระบบการตรวจภาษี</option>
                 <option value="ระบบการตรวจวัตถุดิบคงเหลือ">ระบบการตรวจวัตถุดิบคงเหลือ</option>
