--- a/workspace/ims-client/src/app/buckwaframework/project/pages/check-receipt-tax/check-receipt-tax.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/check-receipt-tax/check-receipt-tax.component.html
@@ -20,15 +20,15 @@
                     </div>
                     <div class="six wide field required">
                         <label class="custom-label-w-5">รหัส</label>
-                        <select class="ui dropdown" class="custom-readonly" readonly="">
-          <option *ngFor="let item of codeList; index as i;" value="{{i+1}}">{{item.value}}</option>
-        </select>
+                        <select class="ui dropdown ai" class="custom-readonly" readonly="">
+                            <option *ngFor="let item of codeList; index as i;" value="{{i+1}}">{{item.value}}</option>
+                        </select>
                     </div>
                     <div class="five wide field required">
                         <label class="custom-label-w-10">สินค้า/บริการ</label>
-                        <select class="ui dropdown" class="custom-readonly" readonly="" [ngModel]="selectedProduct" (ngModelChange)="onChange($event)">
-            <option *ngFor="let item of productList; index as i;" value="{{item.value}}">{{item.value}}</option>
-          </select>
+                        <select class="ui dropdown ai" class="custom-readonly" readonly="" [ngModel]="selectedProduct" (ngModelChange)="onChange($event)">
+                            <option *ngFor="let item of productList; index as i;" value="{{item.value}}">{{item.value}}</option>
+                        </select>
                     </div>
                 </div>
 
@@ -57,7 +57,8 @@
                     </div>
                     <div class="five wide field required">
                         <label class="custom-label-w-10">ใบเสร็จ</label>
-                        <input type="text" class="custom-readonly" readonly="" value="C0140059/000" style="width: 55%;">&nbsp;&nbsp;<input type="text" style="width: 40%;" value="1480">
+                        <input type="text" class="custom-readonly" readonly="" value="C0140059/000" style="width: 55%;">&nbsp;&nbsp;
+                        <input type="text" style="width: 40%;" value="1480">
                     </div>
                     <div class="four wide field required">
                         <label class="custom-label-w-10">จำนวนเงิน</label>
@@ -86,7 +87,8 @@
                     </div>
                     <div class="five wide field required">
                         <label class="custom-label-w-10">ใบเสร็จ</label>
-                        <input type="text" class="custom-readonly" readonly="" value="C0140059/000" style="width: 55%;">&nbsp;&nbsp;<input type="text" style="width: 40%;" value="1481">
+                        <input type="text" class="custom-readonly" readonly="" value="C0140059/000" style="width: 55%;">&nbsp;&nbsp;
+                        <input type="text" style="width: 40%;" value="1481">
                     </div>
                     <div class="four wide field required">
                         <label class="custom-label-w-10">จำนวนเงิน</label>
@@ -118,7 +120,8 @@
                     </div>
                     <div class="five wide field required">
                         <label class="custom-label-w-10">ใบเสร็จ</label>
-                        <input type="text" class="custom-readonly" readonly="" value="C0140059/000" style="width: 55%;">&nbsp;&nbsp;<input type="text" style="width: 40%;" value="1482">
+                        <input type="text" class="custom-readonly" readonly="" value="C0140059/000" style="width: 55%;">&nbsp;&nbsp;
+                        <input type="text" style="width: 40%;" value="1482">
                     </div>
                     <div class="four wide field required">
                         <label class="custom-label-w-10">จำนวนเงิน</label>
@@ -148,7 +151,8 @@
                     </div>
                     <div class="five wide field required">
                         <label class="custom-label-w-10">ใบเสร็จ</label>
-                        <input type="text" class="custom-readonly" readonly="" value="C0140059/000" style="width: 55%;">&nbsp;&nbsp;<input type="text" style="width: 40%;" value="1483">
+                        <input type="text" class="custom-readonly" readonly="" value="C0140059/000" style="width: 55%;">&nbsp;&nbsp;
+                        <input type="text" style="width: 40%;" value="1483">
                     </div>
                     <div class="four wide field required">
                         <label class="custom-label-w-10">จำนวนเงิน</label>
@@ -177,7 +181,8 @@
                     </div>
                     <div class="five wide field required">
                         <label class="custom-label-w-10">ใบเสร็จ</label>
-                        <input type="text" class="custom-readonly" readonly="" value="" style="width: 55%;">&nbsp;&nbsp;<input type="text" style="width: 40%;" value="">
+                        <input type="text" class="custom-readonly" readonly="" value="" style="width: 55%;">&nbsp;&nbsp;
+                        <input type="text" style="width: 40%;" value="">
                     </div>
                     <div class="four wide field required">
                         <label class="custom-label-w-10">จำนวนเงิน</label>
@@ -192,13 +197,13 @@
                 <div class="ui center aligned grid">
                     <div class="eight wide column">
                         <button class="ui mini primary button width-100">
-            <i class="add icon"></i>
-            เพิ่ม
-          </button>
+                            <i class="add icon"></i>
+                            เพิ่ม
+                        </button>
                         <button class="ui mini button width-100">
-            <i class="refresh icon"></i>
-            ล้างข้อมูล
-          </button>
+                            <i class="refresh icon"></i>
+                            ล้างข้อมูล
+                        </button>
                     </div>
                 </div>
             </div>
@@ -243,13 +248,13 @@
                 <div class="ui center aligned grid">
                     <div class="eight wide column">
                         <button class="ui mini primary button">
-            <i class="checkmark icon"></i>
-            ตรวจสอบกับงบสรุปยอดภาษี
-          </button>
+                            <i class="checkmark icon"></i>
+                            ตรวจสอบกับงบสรุปยอดภาษี
+                        </button>
                         <button class="ui mini button">
-            <i class="print icon"></i>
-            พิมพ์กระดาษทำการ
-          </button>
+                            <i class="print icon"></i>
+                            พิมพ์กระดาษทำการ
+                        </button>
                     </div>
                 </div>
             </div>
@@ -276,7 +281,8 @@
                 </div>
                 <div class="six wide field required">
                     <label class="custom-label-w-10">ใบเสร็จ</label>
-                    <input type="text" class="custom-readonly" readonly="" value="C0140059/000" style="width: 55%;">&nbsp;&nbsp;<input type="text" style="width: 40%;" value="1480">
+                    <input type="text" class="custom-readonly" readonly="" value="C0140059/000" style="width: 55%;">&nbsp;&nbsp;
+                    <input type="text" style="width: 40%;" value="1480">
                 </div>
                 <div class="four wide field required">
                     <label class="custom-label-w-10">จำนวนเงิน</label>
@@ -296,13 +302,13 @@
         <div class="ui center aligned grid">
             <div class="six wide column">
                 <button class="ui mini primary button">
-          <i class="save icon"></i>
-          บันทึก
-        </button>
+                    <i class="save icon"></i>
+                    บันทึก
+                </button>
                 <button class="ui mini button" (click)="closePopupEdit()">
-          <i class="close icon"></i>
-          ปิด
-        </button>
+                    <i class="close icon"></i>
+                    ปิด
+                </button>
             </div>
         </div>
     </div>
