--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-full-trader/working-paper-1-full-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/working-paper-1-full-trader/working-paper-1-full-trader.component.html
@@ -23,8 +23,8 @@
                         <div class="four ui action input">
                             <input type="text" placeholder="MM/YYYY" value="{{before}}" readonly="" class="custom-readonly">
                             <button class="ui icon button">
-                <i class="add to calendar icon"></i>
-              </button>
+                                <i class="add to calendar icon"></i>
+                            </button>
                         </div>
                         <div class="one">
                             <label>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;</label>
@@ -32,8 +32,8 @@
                         <div class="four ui action input">
                             <input type="text" placeholder="MM/YYYY" value="{{last}}" readonly="" class="custom-readonly">
                             <button class="ui icon button">
-                <i class="add to calendar icon"></i>
-              </button>
+                                <i class="add to calendar icon"></i>
+                            </button>
                         </div>
                     </div>
                     <div class="eight wide field">&nbsp;&nbsp;&nbsp;
@@ -79,22 +79,22 @@
                 <div class="three wide column" style="padding-bottom: 0"></div>
                 <div class="six wide column" style="padding-bottom: 0">
                     <button class="ui mini primary button" routerLink="/working-paper-1-trader">
-            <i class="list icon"></i>
-            แสดงข้อมูลฉบับย่อ
-          </button>
+                        <i class="list icon"></i>
+                        แสดงข้อมูลฉบับย่อ
+                    </button>
                     <button class="ui mini primary button">
-            <i class="list icon"></i>
-            แสดงข้อมูลฉบับเต็ม
-          </button>
+                        <i class="list icon"></i>
+                        แสดงข้อมูลฉบับเต็ม
+                    </button>
                 </div>
                 <div class="seven wide column" style="padding-bottom: 0">
                     <div class="ui form">
                         <div class="inline fields">
                             <div class="sixteen wide field">
                                 <label style="width: 5em;">พิกัด</label>
-                                <select class="ui dropdown">
-                  <option *ngFor="let item of listItem" value="{{item}}">{{item}}</option>
-                </select>
+                                <select class="ui dropdown ai">
+                                    <option *ngFor="let item of listItem" value="{{item}}">{{item}}</option>
+                                </select>
                             </div>
                         </div>
                     </div>
@@ -184,17 +184,17 @@
                     <div class="ui center aligned grid">
                         <div class="sixteen wide column">
                             <button class="ui mini primary button">
-                <i class="print icon"></i>
-                พิมพ์กระดาษทำการคัดเลือกราย
-              </button>
+                                <i class="print icon"></i>
+                                พิมพ์กระดาษทำการคัดเลือกราย
+                            </button>
                             <button class="ui mini primary button" routerLink="/add-external-data">
-                <i class="save icon"></i>
-                บันทึกข้อมูล
-              </button>
+                                <i class="save icon"></i>
+                                บันทึกข้อมูล
+                            </button>
                             <button class="ui mini button">
-                <i class="refresh icon"></i>
-                ล้างข้อมูล
-              </button>
+                                <i class="refresh icon"></i>
+                                ล้างข้อมูล
+                            </button>
                         </div>
                     </div>
 
